# ragu

./: .gitignore  Cargo.toml  README.md  batch_carga.sql  prueba.csv
scripts/: quickstart.sh
src/: lib.rs  main.rs
