[package]
name = "raiduki"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
colored = "2.1.0"
dotenvy = "0.15.7"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["macros", "migrate", "postgres", "runtime-tokio"] }
tokio = { version = "1.38.0", features = ["full"] }
pgvector = { version = "0.3", features = ["sqlx"] }
clap = { version = "4.5.7", features = ["derive"] }
tempfile = "3.10.1"
tokio-postgres = "0.7.10"
serde_json = "1.0.117"
csv = "1.3.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
